--- a/src/p1-main/m1-ui/u1-app/App.module.css
+++ b/src/p1-main/m1-ui/u1-app/App.module.css
@@ -25,3 +25,9 @@
     border-radius: 5px;
     outline: none;
 }
+.btn {
+    border-radius: 28px;
+    background: linear-gradient(145deg, #cacaca, #f0f0f0);
+    box-shadow:  41px 41px 81px #bebebe,
+                 -41px -41px 81px #ffffff;
+}
