--- a/src/p2-homeworks/h1/Message.module.css
+++ b/src/p2-homeworks/h1/Message.module.css
@@ -85,3 +85,17 @@
 
 }
 
+/*
+
+.content {
+	padding: 10px;
+	border-radius: 5px 5px 5px 0;
+	background-color: rgba(255.255.255.0.3);
+}
+
+.angle {
+	width:15px;
+	height:15px;
+	background: radial-gradient(circle at 0 0, rgba(0, 0, 0, 0) 15px,  rgba(255, 255, 255, 0.3) 0);
+}
+*/
