--- a/src/p2-homeworks/h2/Affairs.module.css
+++ b/src/p2-homeworks/h2/Affairs.module.css
@@ -2,7 +2,7 @@
 	margin-top: 15px;
 	margin: 0 auto;
 	max-width: 500px;
-	min-height: 50vh;
+
 }
 .item {
 	
@@ -51,6 +51,9 @@
 
 	transition:transform 0.1s linear;
 
+}
+.active {
+	opacity: 0.7;
 }
 .btn__filters:hover {
 	transform: scale(1.1);
