--- a/src/p2-homeworks/h3/Greeting.module.css
+++ b/src/p2-homeworks/h3/Greeting.module.css
@@ -1,7 +1,96 @@
-.someClass {
+.container {
+    margin-bottom: 100px;
+    position: relative;
+}
+.btn {
+    color: black;
+    background-color: #fff;
+    margin: 0 10px;
+    padding: 5px 10px ;
+    font-size: 20px;
+    border-radius: 5px;
+    outline: none;
+    border: 1px solid #ccc;
+    transition: all 0.2s linear;
+}
+.count {
+    line-height: 1;
+     color: black;
+    background-color: #fff;
+    margin: 0 10px;
+    padding: 5px 10px ;
+    font-size: 18px;
+    border-radius: 5px;
+    outline: none;
+    border: 1px solid #ccc;
+ 
+}
+.btn:hover {
+    color: #fff;
+    background-color: rgb(155, 155, 155);
+    
+}
+.btn:active {
+       background-color: rgb(88, 87, 87);
 
+}
+
+.names {
+    display: inline-block;
+    background-color: #ccc;
+    margin-right: 5px;
+    margin-top: 5px;
+    
+}
+.input {
+    padding: 5px 10px ;
+    font-size: 20px;
+    border-radius: 5px;
+    outline: none;
+    border: 1px solid #ccc;
+
+    transition: all 0.2s linear;
+}
+.input:focus {
+    border: 1px solid rgb(0, 0, 0);
 }
 
 .error {
     border: 1px solid red;
 }
+.someClass {
+    color: red
+}
+.modal {
+    padding: 10px;
+    border-radius: 5px;
+    width: 300px;
+    height: 150px;
+    color: #fff;
+    background-color: rgba(56, 54, 54, 0.856);
+
+    position: absolute;
+    left: 50%;
+    top: 50%;
+
+    transform: translate(-50%, -50%);
+}
+.modal__content {
+    position: relative;
+}
+.modal__btn {
+    cursor: pointer;
+    position: absolute;
+    right: 0;
+    top: -21px;
+}
+.modal__btn button {
+    cursor: pointer;
+    transition: transform 0.2s linear;
+   
+}
+.modal__btn button:hover {
+    transform: scale(1.1)
+   
+}
+
