--- a/src/p1-main/m1-ui/u1-app/App.module.css
+++ b/src/p1-main/m1-ui/u1-app/App.module.css
@@ -8,7 +8,7 @@
         display: flex;
         flex-direction: column;
         height: auto;
-        max-height: 40vh;
+        height: 40vh;
         overflow: hidden;
         overflow-y: auto;
    
@@ -25,12 +25,27 @@
     border-radius: 5px;
     outline: none;
 }
+
+.input__error::placeholder {
+ 
+    color:red
+}
+
 .btn {
     border-radius: 28px;
     background: linear-gradient(145deg, #cacaca, #f0f0f0);
     box-shadow:  41px 41px 81px #bebebe,
                  -41px -41px 81px #ffffff;
+    cursor: pointer;
+    transition:transform 0.1s linear;
 }
+.btn:hover {
+    transform: scale(1.05);
+}
+.btn:active {
+    background: rgb(255, 251, 251);
+}
+
 hr {
     margin-top: 20px;
     display: block;
