--- a/src/p2-homeworks/h3/Greeting.module.css
+++ b/src/p2-homeworks/h3/Greeting.module.css
@@ -1,6 +1,10 @@
 .container {
-    margin-bottom: 100px;
     position: relative;
+ 
+   
+}
+.inner {
+    min-height: 160px;
 }
 .btn {
     color: black;
@@ -10,6 +14,7 @@
     font-size: 20px;
     border-radius: 5px;
     outline: none;
+    cursor: pointer;
     border: 1px solid #ccc;
     transition: all 0.2s linear;
 }
@@ -51,8 +56,16 @@
 
     transition: all 0.2s linear;
 }
+.input__inner {
+    display: flex;
+    justify-content: center;
+    min-height: 60px;
+}
 .input:focus {
     border: 1px solid rgb(0, 0, 0);
+}
+.input::placeholder {
+    font-size: 16px;
 }
 
 .error {
