--- a/src/p2-homeworks/h4/common/c2-SuperButton/SuperButton.module.css
+++ b/src/p2-homeworks/h4/common/c2-SuperButton/SuperButton.module.css
@@ -1,7 +1,46 @@
 .default {
+    margin-bottom: 10px;
+    outline: none;
+	border: none;
+	box-shadow: 1px 2px 4px 0px #000;
+	border-radius: 5px;
+	background-color: rgb(92, 87, 87);
+	color: #fff;
+	margin-right: 5px;
+	padding: 5px 10px;
+	cursor: pointer;
 
+	transition:transform 0.1s linear;
+}
+
+.default:hover, .red:hover {
+	transform: scale(1.1);
+
+}
+.default:disabled {
+    cursor: not-allowed;
+    opacity: 0.4;
+    transform: none;
+}
+.red:active {
+    background-color: rgb(116, 4, 4);
+
+}
+.default:active {
+	background-color: rgb(37, 36, 36);
 }
 
 .red {
+    margin-bottom: 10px;
+    outline: none;
+	border: none;
+	box-shadow: 1px 2px 4px 0px #000;
+	border-radius: 5px;
+	color: #fff;
+	margin-right: 5px;
+	padding: 5px 10px;
+	cursor: pointer;
+
+	transition:transform 0.1s linear;
     background: red;
 }
